--- a/my/docker-compose.yml
+++ b/my/docker-compose.yml
@@ -2,6 +2,9 @@ nginx:
   build: ./nginx-node/
   ports:
     - "10080:80"
+  links:
+    - tomcat_01
+    - tomcat_02
   # restart: always
   # command: /usr/local/server/openresty/nginx/sbin/nginx && while true;do sleep 60;done
 
@@ -9,12 +12,60 @@ tomcat_01:
   build: ./tomcat-node/
   # ports:
   #   - "10080:80"
-  # restart: always
+  restart: always
   # command: /usr/local/server/openresty/nginx/sbin/nginx && while true;do sleep 60;done
 
 tomcat_02:
   build: ./tomcat-node/
   # ports:
   #   - "10080:80"
-  # restart: always
+  restart: always
   # command: /usr/local/server/openresty/nginx/sbin/nginx && while true;do sleep 60;done
+
+# MySQL database shared with tomcat containers.
+db:
+  image: mysql:latest
+  restart: always
+  environment:
+    MYSQL_ROOT_PASSWORD: admin
+    MYSQL_DATABASE: db_apps
+    MYSQL_USER: root
+    MYSQL_PASSWORD: admin
+  volumes:
+    - "./db:/docker-entrypoint-initdb.d"
+
+# rabbit database shared with tomcat containers.
+rabbit_01:
+  # image: bijukunjummen/rabbitmq-server
+  build: ./rabbit-mq-node/
+  hostname: rabbit_01
+  ports:
+    - "5672:5672"
+    - "15672:15672"
+
+rabbit_02:
+  # image: bijukunjummen/rabbitmq-server
+  build: ./rabbit-mq-node/
+  hostname: rabbit_02
+  links:
+    - rabbit_01
+  environment:
+   - CLUSTERED=true
+   - CLUSTER_WITH=rabbit_01
+   - RAM_NODE=true
+  ports:
+      - "5673:5672"
+      - "15673:15672"
+
+rabbit_03:
+  # image: bijukunjummen/rabbitmq-server
+  build: ./rabbit-mq-node/
+  hostname: rabbit_03
+  links:
+    - rabbit_01
+    - rabbit_02
+  environment:
+   - CLUSTERED=true
+   - CLUSTER_WITH=rabbit_01
+  ports:
+        - "5674:5672"
