--- a/my/docker-compose.yml
+++ b/my/docker-compose.yml
@@ -1,6 +1,7 @@
 # MySQL database shared with tomcat containers.
 mysql:
-  image: mysql:latest
+  # image: mysql:latest
+  build: ./db/
   restart: always
   ports:
     - "13306:3306"
@@ -12,43 +13,42 @@ mysql:
   volumes:
     - "./db:/docker-entrypoint-initdb.d"
 
-# rabbit database shared with tomcat containers.
-rabbit_01:
-  # image: bijukunjummen/rabbitmq-server
-  build: ./rabbit-mq-node/
-  hostname: rabbit_01
-  ports:
-    - "5672:5672"
-    - "15672:15672"
-
-rabbit_02:
-  # image: bijukunjummen/rabbitmq-server
-  build: ./rabbit-mq-node/
-  hostname: rabbit_02
-  links:
-    - rabbit_01
-  environment:
-   - CLUSTERED=true
-   - CLUSTER_WITH=rabbit_01
-   - RAM_NODE=true
-  ports:
-      - "5673:5672"
-      - "15673:15672"
-
-rabbit_03:
-  # image: bijukunjummen/rabbitmq-server
-  build: ./rabbit-mq-node/
-  hostname: rabbit_03
-  links:
-    - rabbit_01
-    - rabbit_02
-  environment:
-   - CLUSTERED=true
-   - CLUSTER_WITH=rabbit_01
-   - RAM_NODE=true
-  ports:
-        - "5674:5672"
-
+# # rabbit database shared with tomcat containers.
+# rabbit_01:
+#   # image: bijukunjummen/rabbitmq-server
+#   build: ./rabbit-mq-node/
+#   hostname: rabbit_01
+#   ports:
+#     - "5672:5672"
+#     - "15672:15672"
+#
+# rabbit_02:
+#   # image: bijukunjummen/rabbitmq-server
+#   build: ./rabbit-mq-node/
+#   hostname: rabbit_02
+#   links:
+#     - rabbit_01
+#   environment:
+#    - CLUSTERED=true
+#    - CLUSTER_WITH=rabbit_01
+#    - RAM_NODE=true
+#   ports:
+#       - "5673:5672"
+#       - "15673:15672"
+#
+# rabbit_03:
+#   # image: bijukunjummen/rabbitmq-server
+#   build: ./rabbit-mq-node/
+#   hostname: rabbit_03
+#   links:
+#     - rabbit_01
+#     - rabbit_02
+#   environment:
+#    - CLUSTERED=true
+#    - CLUSTER_WITH=rabbit_01
+#    - RAM_NODE=true
+#   ports:
+#         - "5674:5672"
 
 tomcat_01:
   build: ./tomcat-node/
