容器化部署系统

--- a/my/db/Dockerfile
+++ b/my/db/Dockerfile
@@ -4,6 +4,15 @@ MAINTAINER workin.me lenxeon lenxeon@163.com
 
 ENV MYSQL_ROOT_PASSWORD admin
 
+ENV MYSQL_DATABASE db_apps
+
 ADD sql/ /sql
 
-RUN /sql/mysql-init.sh
+# # RUN service mysql restart
+# RUN chmod +x /sql/*.sh \
+#   && /sql/mysql-init.sh
+
+
+EXPOSE 3306
+
+# RUN tail -f /*
