--- a/apps/id-web/Dockerfile
+++ b/apps/id-web/Dockerfile
@@ -2,7 +2,7 @@ FROM dev/base
 
 MAINTAINER workin.me lenxeon lenxeon@163.com
 
-ADD ./web-apps-id-service.war /usr/local/server/tomcat7/webapps
+#ADD ./web-apps-id-service.war /usr/local/server/tomcat7/webapps
 
 # ENV zookeeper.host zookeeper:2181
 # ENV zookeeper.group /apps/config
