--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -38,19 +38,19 @@ services:
     ports:
       - "12181:2181"
 
-  dev-id:
-    # image: dev/id
-    build: ./id-service/
-    depends_on:
-      - redis
-      - memcached
-      - zookeeper
-    restart: always
-    environment:
-      - ZOOKEEPER_HOST=zookeeper:2181
-      - ZOOKEEPER_GROUP=/apps/config
-      - ZOOKEEPER_VERSION=1.0.002
-    command: java -jar /app-commons-provider-1.0-SNAPSHOT/app-commons-provider-1.0-SNAPSHOT.jar
+  # dev-id:
+  #   # image: dev/id
+  #   build: ./id-service/
+  #   depends_on:
+  #     - redis
+  #     - memcached
+  #     - zookeeper
+  #   restart: always
+  #   environment:
+  #     - ZOOKEEPER_HOST=zookeeper:2181
+  #     - ZOOKEEPER_GROUP=/apps/config
+  #     - ZOOKEEPER_VERSION=1.0.002
+  #   command: java -jar /app-commons-provider-1.0-SNAPSHOT/app-commons-provider-1.0-SNAPSHOT.jar
 
   dev-id-web:
     # image: dev/id
