--- a/apps/mysql/conf/my.cnf
+++ b/apps/mysql/conf/my.cnf
@@ -4,5 +4,7 @@ default-storage-engine=INNODB
 character-set-server=utf8
 [client]
 default-character-set=utf8
+user=root
+password=Sample09X#
 [mysql]
 default-character-set=utf8
