--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -135,7 +135,11 @@ services:
       - redis
       - memcached
       - zookeeper
-      - mysql
+      - db_uc
+      - db_plat
+      - db_project
+      - db_charge
+      - db_quartz
     restart: always
     environment:
       - ZOOKEEPER_HOST=zookeeper:2181
