--- a/apps/tomcat-node/Dockerfile
+++ b/apps/tomcat-node/Dockerfile
@@ -2,16 +2,8 @@ FROM apps/base
 
 MAINTAINER workin.me lenxeon lenxeon@163.com
 
-RUN echo '====================================tomcat============================================'
-# RUN cd /tmp \
-#   && wget http://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-7/v7.0.75/bin/apache-tomcat-7.0.75.tar.gz \
-#   && tar zxvf apache-tomcat-7.0.75.tar.gz \
-#   && mkdir -p /usr/local/server \
-#   && mv apache-tomcat-7.0.75 /usr/local/server/tomcat7 \
-#   && rm -r -f *
-
-# ENV CATALINA_HOME /usr/local/server/tomcat7
-# ENV PATH $PATH:$CATALINA_HOME/bin
+ENV CATALINA_HOME /usr/local/server/tomcat7
+ENV PATH $PATH:$CATALINA_HOME/bin
 
 
 #ADD ucenter-user-provider-1.0-SNAPSHOT-assembly.tar.gz /
