--- a/apps/centos-base/Dockerfile
+++ b/apps/centos-base/Dockerfile
@@ -40,7 +40,7 @@ RUN wget https://static-youth.teamillion.com/soft/apache/apache-tomcat-7.0.94.ta
 ENV CATALINA_HOME /app/tomcat7
 ENV PATH $PATH:$CATALINA_HOME/bin
 
-CMD ["catalina.sh", "run"]
+# CMD ["catalina.sh", "run"]
 
 RUN rm -f /apache-tomcat*.gz
 RUN rm -r -f /usr/local/server/tomcat7/webapps/*
