--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -150,8 +150,7 @@ services:
   #   command: java -jar /app-commons-provider-1.0-SNAPSHOT/app-commons-provider-1.0-SNAPSHOT.jar
 
   dev-id-web:
-    build: ./tomcat-node/
-    build: ./id-web/
+    image: apps/base
     ports:
       - "18080:8080"
     depends_on:
@@ -164,6 +163,9 @@ services:
       - ZOOKEEPER_HOST=zookeeper:2181
       - ZOOKEEPER_GROUP=/apps/config
       - ZOOKEEPER_VERSION=1.0.002
+    volumes:
+      - "./tomcat-node/init:/init"
+    command: "chmod +x /init/*.sh && /init/init.sh"
 
 
   # tomcat_01:
