--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -164,8 +164,8 @@ services:
       - ZOOKEEPER_GROUP=/apps/config
       - ZOOKEEPER_VERSION=1.0.002
     volumes:
-      - "./tomcat-node/init:/init"
-    command: "chmod +x /init/*.sh && /init/init.sh"
+      - "./tomcat-node/init:/"
+    command: "chmod +x /*.sh && /init.sh"
 
 
   # tomcat_01:
