--- a/apps/centos-base/Dockerfile
+++ b/apps/centos-base/Dockerfile
@@ -20,16 +20,16 @@ RUN echo '================install git================'
 RUN yum install -y git
 #zsh
 RUN echo '================install zsh================'
-RUN wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+RUN wget http://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
 #jdk
 RUN echo '================install jdk================'
-RUN wget https://static-youth.teamillion.com/soft/sun-jdk/jdk-8u151-linux-x64.rpm
+RUN wget http://static-youth.teamillion.com/soft/sun-jdk/jdk-8u151-linux-x64.rpm
 RUN rpm -ivh jdk*.rpm
 RUN rm -f /jdk*.rpm
 
 #tomcat
 RUN echo '================install tomcat-7================'
-RUN wget https://static-youth.teamillion.com/soft/apache/apache-tomcat-7.0.94.tar.gz\
+RUN wget http://static-youth.teamillion.com/soft/apache/apache-tomcat-7.0.94.tar.gz\
   && mkdir -p /usr/local/server\
   && tar -zxvf apache-tomcat-7.0.94.tar.gz -C /usr/local/server\
   && cd /usr/local/server/\
