--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -93,6 +93,16 @@ services:
 
 
 
+  ## MySQL database shared with tomcat containers.
+  mongodb:
+    image: mongo:3.6
+    restart: always
+    #在主机上绑定端口和docker容器通信
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: Sample09X#
+    volumes:
+      - ./mongodb/init.js:/docker-entrypoint-initdb.d/init.js:ro
 
 
   ## MySQL database shared with tomcat containers.
@@ -158,6 +168,7 @@ services:
       - memcached
       - zookeeper
       - mysql
+      - mongodb
     restart: always
     environment:
       - ZOOKEEPER_HOST=zookeeper:2181
