--- a/apps/mongodb/Dockerfile
+++ b/apps/mongodb/Dockerfile
@@ -97,6 +97,8 @@ RUN mkdir -p /data/db /data/configdb \
 	&& chown -R mongodb:mongodb /data/db /data/configdb
 VOLUME /data/db /data/configdb
 
+COPY init.js /docker-entrypoint-initdb.d/
+
 COPY docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["docker-entrypoint.sh"]
 
