--- a/apps/tomcat-node/Dockerfile
+++ b/apps/tomcat-node/Dockerfile
@@ -5,10 +5,9 @@ MAINTAINER workin.me lenxeon lenxeon@163.com
 ENV CATALINA_HOME /usr/local/server/tomcat7
 ENV PATH $PATH:$CATALINA_HOME/bin
 
-
-#ADD ucenter-user-provider-1.0-SNAPSHOT-assembly.tar.gz /
-
-
+ADD apps-web.war /usr/local/server/tomcat7/webapps/
+RUN mv apps-web.war /usr
 
 EXPOSE 8080
-RUN tail -f /*
+# RUN tail -f /*
+CMD ["catalina.sh", "run"]
