--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -176,9 +176,9 @@ services:
       - ZOOKEEPER_HOST=zookeeper:2181
       - ZOOKEEPER_GROUP=/apps/config
       - ZOOKEEPER_VERSION=1.0.002
-    volumes:
-      - "./tomcat-node/init:/init"
-    command: "chmod +x /init/init.sh && sh /init/init.sh"
+    # volumes:
+    #  - "./tomcat-node/init:/init"
+    command: "sh /usr/local/server/tomcat7/bin/catalina.sh run"
 
 
   # tomcat_01:
