--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -117,7 +117,7 @@ services:
       - "13310:3306"
     environment:
       MYSQL_DATABASE: db_project
-      MYSQL_USER: apps
+      MYSQL_USER: root
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_PASSWORD: Sample09X#
     volumes:
