--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -116,10 +116,11 @@ services:
     ports:
       - "13310:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: "Sample09X#"
+      # MYSQL_USER: "root"
       MYSQL_DATABASE: "db_project"
-      MYSQL_USER: "root"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "no"
       MYSQL_PASSWORD: "Sample09X#"
+      MYSQL_ROOT_PASSWORD: "Sample09X#"
     volumes:
       - "./mysql/data:/var/lib/mysql"
       - "./mysql/conf/my.cnf:/etc/my.cnf"
