--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -117,10 +117,10 @@ services:
       - "13310:3306"
     environment:
       # MYSQL_USER: "root"
-      MYSQL_DATABASE: "db_project"
-      MYSQL_ALLOW_EMPTY_PASSWORD: "no"
-      MYSQL_PASSWORD: "Sample09X#"
-      MYSQL_ROOT_PASSWORD: "Sample09X#"
+      # MYSQL_DATABASE: "db_project"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      # MYSQL_PASSWORD: "Sample09X#"
+      # MYSQL_ROOT_PASSWORD: "Sample09X#"
     volumes:
       - "./mysql/data:/var/lib/mysql"
       - "./mysql/conf/my.cnf:/etc/my.cnf"
