--- a/apps/mysql/conf/my.cnf
+++ b/apps/mysql/conf/my.cnf
@@ -5,6 +5,8 @@ skip-name-resolve
 default-storage-engine=INNODB
 character-set-server=utf8
 [client]
+port = 3306
+socket =/var/lib/mysql/mysql.sock
 default-character-set=utf8
 [mysql]
 default-character-set=utf8
